# kokkos-hotspot

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cuda  README.md  run-clang-tidy.sh  sonar-project.properties
.github/workflows/: sonarcloud.yml
docs/: build.md  csv-format.md  docker.md  roadmap.md  troubleshooting.md  usage.md
examples/: CMakeLists.txt  app.cpp  kernels.hpp
include/kokkos_hotspot/: tool_common.hpp
scripts/: analyze_hotspots.sh  analyze_timings.py
src/: tool_common.cpp  tool_profiling.cpp
